[gd_scene load_steps=33 format=3 uid="uid://d2fac2xibuh1b"]

[ext_resource type="Theme" uid="uid://bqpi1momfja7u" path="res://themes/base.tres" id="1_iqqha"]
[ext_resource type="FontVariation" uid="uid://th0tjv2xcuen" path="res://fonts/main_font.tres" id="3_qwbhy"]
[ext_resource type="Shader" path="res://tween.gdshader" id="4_5diq2"]
[ext_resource type="Texture2D" uid="uid://c5kdgsphlw0bn" path="res://icon.svg" id="4_epacs"]
[ext_resource type="Script" path="res://main.gd" id="6"]
[ext_resource type="Shader" path="res://rounded.gdshader" id="9_ife38"]
[ext_resource type="Texture2D" uid="uid://b21fcl1p2qpc8" path="res://assets/settings.png" id="10"]
[ext_resource type="FontFile" uid="uid://4fvodi04j1og" path="res://fonts/HankenGrotesk-Bold.ttf" id="13_eso48"]
[ext_resource type="FontFile" uid="uid://pskwpwxk0pd4" path="res://fonts/HankenGrotesk-SemiBold.ttf" id="15_m18sp"]
[ext_resource type="Script" path="res://starspin.gd" id="16"]
[ext_resource type="FontFile" uid="uid://cknx8yer7op7k" path="res://fonts/HankenGrotesk.ttf" id="16_aeh5c"]
[ext_resource type="Texture2D" uid="uid://c5na4nwipcjcg" path="res://assets/home.svg" id="16_t3pry"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_spum4"]
shader = ExtResource("4_5diq2")
shader_parameter/weight = null
shader_parameter/alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdqvn"]
bg_color = Color(0, 0.392157, 0.678431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r15we"]
shader = ExtResource("9_ife38")
shader_parameter/radius = 18.0
shader_parameter/weight = 1.0

[sub_resource type="FontVariation" id="FontVariation_sxnxf"]
base_font = ExtResource("16_aeh5c")
spacing_glyph = -4

[sub_resource type="FontVariation" id="FontVariation_fhnum"]
base_font = ExtResource("16_aeh5c")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_weaoq"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogvr3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_right = 18
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikao0"]
shader = ExtResource("4_5diq2")
shader_parameter/weight = null
shader_parameter/alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvc6i"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8d2wc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kop0i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7uotb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0ql2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_574mr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7efqp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tqixq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m6748"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6eaa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rk3o6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5vb6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 770.0
offset_bottom = 350.0
theme = ExtResource("1_iqqha")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="TopPanel" type="ColorRect" parent="Main"]
layout_mode = 0
offset_right = 770.0
offset_bottom = 350.0

[node name="Adastral" type="Label" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 49.0
theme_type_variation = &"TopLabels"
theme_override_fonts/font = ExtResource("3_qwbhy")
theme_override_font_sizes/font_size = 25
text = "Adastral (alpha 3)"

[node name="AdastralLogo" type="TextureRect" parent="Main/TopPanel"]
material = SubResource("ShaderMaterial_spum4")
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 47.0
texture = ExtResource("4_epacs")
expand_mode = 1

[node name="HomeButton" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 681.0
offset_top = 14.0
offset_right = 713.0
offset_bottom = 46.0
theme_type_variation = &"TopButton"
texture_normal = ExtResource("16_t3pry")
ignore_texture_size = true
stretch_mode = 0

[node name="AdvancedButton" type="TextureButton" parent="Main/TopPanel"]
layout_mode = 0
offset_left = 724.0
offset_top = 14.0
offset_right = 756.0
offset_bottom = 46.0
theme_type_variation = &"TopButton"
action_mode = 0
texture_normal = ExtResource("10")
ignore_texture_size = true
stretch_mode = 0

[node name="Adastral2" type="Label" parent="Main/TopPanel"]
visible = false
layout_mode = 0
offset_left = 358.0
offset_top = 15.0
offset_right = 581.0
offset_bottom = 50.0
theme_type_variation = &"TopLabels"
theme_override_fonts/font = ExtResource("15_m18sp")
theme_override_font_sizes/font_size = 22
text = "WIP, subject to change"

[node name="Panel2" type="Panel" parent="Main"]
layout_mode = 0
offset_left = 81.0
offset_top = 61.0
offset_right = 780.0
offset_bottom = 373.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fdqvn")
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="Main/Panel2"]
material = SubResource("ShaderMaterial_r15we")
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 709.0
offset_bottom = 224.0
expand_mode = 1

[node name="Panel" type="Panel" parent="Main"]
visible = false
layout_mode = 0
offset_left = -171.0
offset_top = 568.0
offset_right = 29.0
offset_bottom = 1258.0
rotation = -1.5708
theme_type_variation = &"BigGrad"

[node name="AboutInfo" type="Control" parent="Main"]
anchors_preset = 0
offset_left = -1.0
offset_top = -8.0
offset_right = -1.0
offset_bottom = -8.0

[node name="BigLabel" type="Label" parent="Main/AboutInfo"]
layout_mode = 0
offset_left = 358.0
offset_top = 131.0
offset_right = 720.0
offset_bottom = 262.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_sxnxf")
theme_override_font_sizes/font_size = 100
text = "Adastral"
visible_characters = 0
visible_ratio = 0.0

[node name="Label" type="Label" parent="Main/AboutInfo"]
layout_mode = 0
offset_left = 348.0
offset_top = 235.0
offset_right = 765.0
offset_bottom = 268.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_qwbhy")
theme_override_font_sizes/font_size = 25
text = "Copyright 2024, The Adastral Group."

[node name="Label2" type="Label" parent="Main/AboutInfo"]
layout_mode = 0
offset_left = 334.0
offset_top = 270.0
offset_right = 751.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_fhnum")
theme_override_font_sizes/font_size = 15
text = "Adastral is FREE SOFTWARE available under 
the GNU GPLV3. See adastral.net/license for details."
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Main"]
visible = false
layout_mode = 0
offset_left = 123.0
offset_top = 91.0
offset_right = 323.0
offset_bottom = 291.0
pivot_offset = Vector2(100, 100)
expand_mode = 1
stretch_mode = 5
script = ExtResource("16")

[node name="BottomPanel" type="Panel" parent="Main"]
layout_mode = 2
offset_left = 80.0
offset_top = 272.0
offset_right = 770.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_weaoq")

[node name="SidePanel" type="Panel" parent="Main"]
layout_mode = 0
offset_top = 60.0
offset_right = 67.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ogvr3")

[node name="HBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
offset_top = 74.0
offset_right = 67.0
offset_bottom = 350.0
size_flags_vertical = 3

[node name="GameText" type="RichTextLabel" parent="Main"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 785.0
offset_bottom = 118.0
theme_type_variation = &"PositiveRTL"
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[b]Welcome to Adastral! [/b]Select a game to install."

[node name="LatestVersion" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 85.0
offset_top = 283.0
offset_right = 485.0
offset_bottom = 315.0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "bbcvbcvb"
scroll_active = false

[node name="InstalledVersion" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 85.0
offset_top = 309.0
offset_right = 485.0
offset_bottom = 335.0
pivot_offset = Vector2(330, -26)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "vvcbvcbvc"
scroll_active = false

[node name="Path3D" type="Label" parent="Main"]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 301.0
offset_right = 535.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 18
text = "Installing to: /this/is/a/very/long/directory/open_fortress"

[node name="ProgressBar" type="ProgressBar" parent="Main"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 80.0
offset_top = 260.0
offset_right = 770.0
offset_bottom = 281.0

[node name="Install" type="Button" parent="Main"]
layout_mode = 0
offset_left = 647.0
offset_top = 289.0
offset_right = 761.0
offset_bottom = 335.0
focus_mode = 0
theme_override_font_sizes/font_size = 22

[node name="Label" type="Label" parent="Main/Install"]
layout_mode = 0
offset_left = 21.0
offset_top = 8.0
offset_right = 94.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Install"
horizontal_alignment = 1

[node name="Verify" type="Button" parent="Main"]
layout_mode = 0
offset_left = 505.0
offset_top = 289.0
offset_right = 638.0
offset_bottom = 335.0
focus_mode = 0
theme_override_font_sizes/font_size = 22

[node name="Label" type="Label" parent="Main/Verify"]
layout_mode = 0
offset_left = 30.0
offset_top = 8.0
offset_right = 103.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Verify"
horizontal_alignment = 1

[node name="Wordmark" type="TextureRect" parent="Main"]
material = SubResource("ShaderMaterial_ikao0")
layout_mode = 0
offset_left = 85.0
offset_top = 155.0
offset_right = 485.0
offset_bottom = 255.0
theme_type_variation = &"WMPanel"
expand_mode = 1
stretch_mode = 4

[node name="AdvancedPanel" type="Panel" parent="Main"]
layout_mode = 0
offset_left = 770.0
offset_top = 60.0
offset_right = 1319.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vvc6i")

[node name="TextureRect" type="TextureRect" parent="Main/AdvancedPanel"]
visible = false
layout_mode = 0
offset_left = 124.0
offset_top = 13.0
offset_right = 448.0
offset_bottom = 337.0
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main/AdvancedPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 13.0
offset_right = 124.0
offset_bottom = 278.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/AdvancedPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Button" parent="Main/AdvancedPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"ImportantButton"
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_8d2wc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kop0i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7uotb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w0ql2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_574mr")
text = "General"

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/AdvancedPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Button" parent="Main/AdvancedPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"ImportantButton"
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_7efqp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tqixq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_m6748")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b6eaa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rk3o6")
text = "Download"

[node name="HBoxContainer3" type="HBoxContainer" parent="Main/AdvancedPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Button" parent="Main/AdvancedPanel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"ImportantButton"
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_7efqp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tqixq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_m6748")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b6eaa")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rk3o6")
text = "Launching"

[node name="Panel" type="Panel" parent="Main/AdvancedPanel"]
layout_mode = 0
offset_left = 146.0
offset_right = 549.0
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s5vb6")

[node name="VBoxContainer" type="VBoxContainer" parent="Main/AdvancedPanel/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 6.0
offset_right = 388.0
offset_bottom = 280.0

[node name="Label" type="Label" parent="Main/AdvancedPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_eso48")
theme_override_font_sizes/font_size = 24
text = "General Options"

[node name="VBoxContainer" type="VBoxContainer" parent="Main/AdvancedPanel/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Install Path"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="InstallPath" type="Label" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileDialog" type="FileDialog" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/AdvancedPanel/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Launch Options"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="LaunchOptions" type="LineEdit" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Main/AdvancedPanel/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.537255)
layout_mode = 0
offset_right = 770.0
offset_bottom = 350.0
expand_mode = 1

[connection signal="pressed" from="Main/TopPanel/HomeButton" to="Main" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Main/TopPanel/AdvancedButton" to="Main" method="_on_Button4_pressed"]
[connection signal="pressed" from="Main/Install" to="Main" method="_on_install_pressed"]
[connection signal="pressed" from="Main/Verify" to="Main" method="_on_verify_pressed"]
[connection signal="pressed" from="Main/AdvancedPanel/VBoxContainer/HBoxContainer/Label" to="Main" method="_on_label_pressed"]
[connection signal="pressed" from="Main/AdvancedPanel/VBoxContainer/HBoxContainer2/Label" to="Main" method="_on_label2_pressed"]
[connection signal="pressed" from="Main/AdvancedPanel/VBoxContainer/HBoxContainer3/Label" to="Main" method="_on_label2_pressed"]
